--- a/css/style.css
+++ b/css/style.css
@@ -59,11 +59,11 @@ body {
     display: none;
 }
 
-#backgroundImage {
+.road {
     position: absolute;
     top: 55%;
     left: 50%;
-    width: 90rem;
+    width: 80%;
     height: 100vh;
     border: 1px solid black;
     transform: translate(-50%, -50%);
@@ -71,11 +71,11 @@ body {
 }
 
 .player {
-    --x: 50;
-    --y: 85;
+    --x: 57;
+    --y: 87;
     position: absolute;
-    width: 7.6rem;
-    height: 15rem;
+    width: 6%;
+    height: 24%;
     top: calc(var(--y)*1vh);
     left: calc(var(--x)*1vw);
     border: 1px solid black;
