better looking menu + scrolling background (small fix needed)

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-color: whitesmoke;
+    background-color: rgb(130, 197, 86);
     font-family: poppins, sans-serif;
     overflow: hidden;
 }
@@ -19,6 +19,13 @@ body {
     flex-direction: column;
     align-items: center;
     height: 100vh;
+}
+
+.menu-background {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
 }
 
 .menu h1 {
@@ -32,38 +39,47 @@ body {
 
 .options, .tutorial {
     position: absolute;
-    top: 50%;
+    top: 61%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 30%;
+}
+
+.tutorial .controls {
+    border: 1px solid black;
+    background-color: whitesmoke;
+    width: 100%;
+    font-size: 30px;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.9); 
 }
 
 .button {
     margin-top: 1rem;
     padding: 1rem;
     font-size: 1.5rem;
-    background-color: #26437a; 
+    background-color: #1b989c; 
     width: 100%;
     color: white;
     border: none; 
     border-radius: 5px; 
     cursor: pointer; 
     transition: background-color 0.3s ease; 
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.9); 
 }
 
 .button:hover {
-    background-color: #345a7e;
+    background-color: #126d6d;
 }
 
 .game-window, .tutorial {
     display: none;
 }
 
-.road {
+.canvas {
     position: absolute;
-    top: 55%;
+    top: 50%;
     left: 50%;
-    width: 80%;
+    width: 70%;
     height: 100vh;
     border: 1px solid black;
     transform: translate(-50%, -50%);
@@ -79,7 +95,7 @@ body {
     top: calc(var(--y)*1vh);
     left: calc(var(--x)*1vw);
     border: 1px solid black;
-    filter: drop-shadow(1px 1px 10px rgb(232, 150, 150));
+    filter: drop-shadow(1px 1px 10px rgb(17, 117, 233));
     transform: translate(-50%, -50%);
     background-image: url('../sources/graphics/car (1).png');
     background-size: cover;
