--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,21 @@ body {
     display: none;
 }
 
+.stats {
+    z-index: 1;
+    margin-left: 1%;
+    width: 100%;
+    position: absolute;
+    color: white;
+}
+
+.stats h2 {
+    font-size: 3rem;
+    font-weight: 900;
+    text-shadow: 5px 2px 2px black;
+    letter-spacing: 2px;
+}
+
 .canvas {
     position: absolute;
     top: 50%;
