--- a/css/style.css
+++ b/css/style.css
@@ -110,3 +110,17 @@ body {
     left: calc(var(--x)*1vw);
     filter: drop-shadow(1px 1px 10px rgb(233, 17, 17));
 }
+
+dialog
+
+#loseDialog {
+    box-shadow: 9px 4px 47px rgba(115, 4, 4, 0.568);
+    background-color: #d2dfe7;
+    z-index: -1;
+}
+
+#winDialog {
+    box-shadow: 9px 4px 47px rgba(37, 151, 8, 0.645);
+    background-color: #d2dfe7;
+    z-index: -1;
+}
