--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 
 body {
     background-color: rgb(130, 197, 86);
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
     overflow: hidden;
 }
 
