--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body {
 
 .options {
     position: absolute;
-    top: 65%;
+    top: 68%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 30%;
@@ -187,6 +187,11 @@ body {
 
 .form-label {
     font-size: 25px;  
+}
+
+#levelCounter {
+    color: rgb(2, 2, 38);
+    font-size: 2rem;
 }
 
 @media (max-width: 540px) { 
