--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,18 @@ body {
     font-size: 2rem;
 }
 
+@media (max-width: 760px) { 
+    .dialog .button{
+        font-size: 0.7rem;
+    }
+    .dialog h2 {
+        font-size: 1.5rem;
+    }
+    #levelCounter {
+        font-size: 1rem;
+    }
+}
+
 @media (max-width: 540px) { 
     .canvas {
         width: 100%;
